Parsing of matches